# fast-matmul

./: .gitignore  .gitmodules  .mailmap  Makefile  README.md  gpu_matmul.sbatch  run_toeplitz.sbatch  run_toeplitz_multi.sbatch  skills-lock.json
.agents/: AGENTS.md
algorithms/: all_algorithms.hpp  bini322_10_52_approx.hpp  classical222.hpp  classical333.hpp  classical423.hpp  fast234_20_144.hpp  fast243_20_144.hpp  fast252_18_99.hpp  fast322_11_50.hpp  fast323_15_103.hpp  fast323_15_89.hpp  fast324_20_144.hpp  fast332_15_103.hpp  fast333_23_125.hpp  fast333_23_152.hpp  fast333_23_221.hpp  fast342_20_144.hpp  fast343_29_234.hpp  fast422_14_84.hpp  fast423_20_144.hpp  fast424_26_206.hpp  fast424_26_257.hpp  fast432_20_144.hpp  fast433_29_234.hpp  fast442_26_257.hpp  fast522_18_99.hpp  hk323_15_84.hpp  hk323_15_94.hpp  hk332_15_94.hpp  schonhage333_21_117_approx.hpp  smirnov333_20_182_approx.hpp  smirnov333_23_128.hpp  smirnov333_23_139.hpp  smirnov336_40_960.hpp  smirnov363_40_960.hpp  smirnov633_40_960.hpp  strassen.hpp  tichavsky_kovac336_40_960.hpp  tichavsky_kovac363_40_960.hpp
benchmarks/: add_benchmark.cpp  cse_add_perf_benchmarks.cpp  daxpy_benchmark.cpp  dgemm_curves.cpp  matmul_benchmarks.cpp  square54_benchmark.cpp  strassen_scaling_perf.cpp
codegen/: gen.py  gen_all_algorithms.sh
linalg/: blas_wrap.hpp  linalg.hpp
make.incs/: make.inc.linux  make.inc.toeplitz
python/: ballard_data.txt  plot.py  plot_grid.py  plot_mkl_faer_only.py  plot_sequential_grid.py  plot_spline.py  plot_utils.py  pyproject.toml  resolve_run_dir.py
report/: presentation.typ  ref.bib  report.tex  skills-lock.json
rust/: Cargo.toml  README.md  benchmark_results.csv  build.rs  row_issue.md  setup.sh
rust/.cargo/: config.toml
rust/benches/: base_matmul_curves.rs  benchmark.rs  check_memory_helper.rs  dgemm_curves.rs  export_helper.rs  job_helper.rs  matmul_bench.rs  util.rs
rust/benches/base_matmul/: mod.rs
rust/ffi/matmul/: mkl.c
rust/src/: benchmark.rs  cp.rs  dynamic_peeling.rs  l_map.rs  lib.rs  loader.rs  main.rs  matmul.rs  mkl.rs  parallelism_mode.rs
rust/tests/: cp_matmul_tests.rs  cp_tests.rs  l_map_tests.rs  mapping_tests.rs  mkl_tests.rs  strassen_tests.rs  tensor_tests.rs
scripts/: c_sequential_job.sbatch  compile.sh  gpu_job.sbatch  merge_c_results.py  merge_results.py  merge_run.py  merge_run1.py  pre-setup.sh  rust_sequential_job.sbatch  submit_c_jobs.sh  submit_gpu_jobs.sh  submit_jobs.sh
src/: Cargo.toml
util/: MemoryManager.hpp  (+2 more)
(+3 files in other folders)
