[package]
name = "fast_matmul"
version = "0.1.0"
edition = "2024"
authors = [
	"Alberto Defendi <albedef@pm.me>"
]
description = ""
readme = "README.md"

[dependencies]
rand = "0.8"
faer = { version = "0.19", features = ["rand"] }
rayon = "1.10"

[build-dependencies]
cc = "1.0"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
debug-assertions = false
strip = "symbols"


[profile.release.package."*"]
opt-level = 3

[profile.bench]
inherits = "release"
debug = false
